--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,7 +33,7 @@
       </column>
       <column>
        <property name="text">
-        <string>Donnée Véérifié</string>
+        <string>Donnée Vérifié</string>
        </property>
       </column>
       <column>
