add desactivate et uninstal package
+ debug Icone in dirrectory

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -103,9 +103,9 @@
        </item>
        <item>
         <widget class="QScrollArea" name="scrollArea">
-         <property name="horizontalScrollBarPolicy">
+         <!--<property name="horizontalScrollBarPolicy">
           <enum>Qt::ScrollBarAlwaysOff</enum>
-         </property>
+         </property>-->
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
